--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -27,7 +27,7 @@ body {
 
 #contact {
     width: 100%;
-    height: 75vh;
+    height: 78vh;
     /* background-color: rgb(38, 38, 38); */
     /* background-color: #353b48; */
     /* background-color: #718093; */
@@ -51,6 +51,35 @@ body {
 [data-scroll="out"] {
     opacity: 0;
     transform: translateX(-200px);
+}
+
+#home p {
+    font-size: 12px;
+    text-align: center;
+    position: relative;
+    color: white;
+    width: 100%;
+    padding: 35px;
+    /* line-height: 100px; */
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    /* justify-content: end; */
+    /* z-index: 1; */
+}
+
+footer {
+    height: 35px;
+    position: absolute;
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    line-height: 35px;
+    margin: 20px 15px auto auto;
+    overflow: hidden;
+    /* background-color: #f5f5f5; */
+    /* background: rgba(244, 244, 244, 0.5); */
 }
 
 
