--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,49 @@ body {
     margin: 0;
 }
 
+#demo {
+    -webkit-transition: width 2s ease;
+    -moz-transition: width 2s ease;
+    -o-transition: width 2s ease;
+    transition: width 0.5s ease;
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    /* background: yellow; */
+    vertical-align: middle;
+    line-height: 50px;
+    height: 50px;
+    width: 0;
+    /* background: rgba(174, 174, 174, 0.5); */
+}
+
+.navigationlinks {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #000b80;
+    font-family: 'Raleway', sans-serif;
+    /* text-shadow: 1px 0 rgba(104, 104, 104, 0.8); */
+    text-shadow: 1px 0px rgba(0, 0, 0, 0.5);
+}
+
+.navigationlinks:hover {
+    color: white;
+    text-shadow: 1px 0px rgba(15, 15, 15, 0.5);
+}
+
+#trialnav.scrolled {
+    background: #AEAEAE;
+    opacity: 0.8;
+    transition: background 500ms;
+}
+
+#demo.in {
+    width: 420px;
+}
+
+
+/* --------------- */
+
 #about {
     width: 100%;
     /* height: 100vh; */
@@ -27,7 +70,8 @@ body {
 
 #contact {
     width: 100%;
-    height: 78vh;
+    /* height: 78vh; */
+    height: 480px;
     /* background-color: rgb(38, 38, 38); */
     /* background-color: #353b48; */
     /* background-color: #718093; */
@@ -475,6 +519,7 @@ footer {
     background-attachment: fixed;
     height: 100vh;
     width: 100%;
+    z-index: 0;
     /* z-index: 0; */
 }
 
