--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,13 @@ body {
     margin: 0;
 }
 
+
+/* @media only screen and (max-width: 300px) {
+    .bar {
+        margin: 0px 0px 0px;
+    }
+} */
+
 #demo {
     -webkit-transition: width 2s ease;
     -moz-transition: width 2s ease;
@@ -56,7 +63,7 @@ body {
 }
 
 #demo.in {
-    width: 460px;
+    width: 410px;
 }
 
 
