add resume link and change skills title font size

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -354,6 +354,7 @@ footer {
     max-width: 100%;
     width: 100%;
     margin: 2% auto;
+    background-color: #EAEAEA;
     /* display: block; */
     /* margin-left: auto;
     margin-right: auto; */
